landing submenu changes

--- a/src/app/style/sass/responsive.scss
+++ b/src/app/style/sass/responsive.scss
@@ -705,7 +705,8 @@
   .landing-top-header {
     .navbar-collapse {
       .navbar-nav {
-        background-color: rgba(73,68,62,.8);
+        margin: 3.5px -15px;
+        background-color: rgba(73,68,62,.9);
         .account-list-xs {
           > li {
             padding: 10px 15px;
