--- a/src/app/views/seller-account/equipments/equipments.html
+++ b/src/app/views/seller-account/equipments/equipments.html
@@ -1,5 +1,5 @@
 <div id="dashboard-equipments" class="tab-pane fade in active col-padding-small col-padding-sm">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">My Equipments
 			<button class="btn all-btn pull-right primary-btn"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
 		</h1>
