--- a/src/app/views/seller-account/invoices/edit/edit.html
+++ b/src/app/views/seller-account/invoices/edit/edit.html
@@ -1,74 +1,80 @@
-<div class="booking-information travelo-box invoice-details" style="margin-bottom: 0px; padding: 0">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<h2>Edit Invoice</h2>
-		<dl class="term-description">
-				<dt>Order number:</dt><dd> 1234567890</dd>
-		</dl>
+	</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
+		<p class="hotel-color no-margin">Order number:</p>
+	</div>
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<p class="no-margin">1234567890</p>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
-		<div class="row invoice-address align-address" style="margin-bottom: 0;">
-				<div class="col-md-6">
-						<h2>Shipping Address</h2>
-						<dl class="term-description">
-								<dd>Hiren Kesariya</dd>
-								<dd>Address Line 1, Address Line 2</dd>
-								<dd>California-44123</dd>
-								<dd>United States of America</dd>
-						</dl>
-				</div>
-				<div class="col-md-6">
-						<h2>Billing Address</h2>
-						<dl class="term-description">
-								<dd>Hiren Kesariya</dd>
-								<dd>Address Line 1, Address Line 2</dd>
-								<dd>California-44123</dd>
-								<dd>United States of America</dd>
-						</dl>
-				</div>
+	</div>
+	<div class="row invoice-address align-address" style="margin-bottom: 0;">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<h2>Shipping Address</h2>
+			<dl class="term-description">
+				<dd>Hiren Kesariya</dd>
+				<dd>Address Line 1, Address Line 2</dd>
+				<dd>California-44123</dd>
+				<dd>United States of America</dd>
+			</dl>
 		</div>
-
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<h2>Billing Address</h2>
+			<dl class="term-description">
+				<dd>Hiren Kesariya</dd>
+				<dd>Address Line 1, Address Line 2</dd>
+				<dd>California-44123</dd>
+				<dd>United States of America</dd>
+			</dl>
+		</div>
+	</div>
 </div>
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col">
-			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 pull-center">
 				<img src="http://placehold.it/80x80" alt="">
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 product-name">
 				<h4>Hiren product name</h4>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 description-col edit-desc-col">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<div class="col-lg-6 col-md-6 col-sm-5 col-xs-12 description-col edit-desc-col description-col-xs col-padding-small">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 border-sm">
 					<p>Rented For <input type="text" placeholder="12 days" class="pull-right form-control"> </p>
 					<p>Order Type <span class="pull-right">Postpaid</span></p>
 					<p>Quantity <input type="text" placeholder="3" class="pull-right form-control"/></p>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-col">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right-col">
 					<p>Shipping <input type="text" placeholder="$100" class="pull-right form-control"/></p>
 					<p>Overuse <input type="text" placeholder="$220" class="pull-right form-control"/></p>
 					<p>Additional <input type="text" placeholder="$200" class="pull-right form-control"/></p>
 				</div>
 			</div>
-			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 product-name pull-center">
+			<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
 				<h4>$1200</h4>
 			</div>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 				<div class="description">
 					<h4 style="margin-top: 28px;">Cart Total</h4>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 add-cost">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
 				<p>Shipping Cost <span class="pull-right">$50</span></p>
 				<p>Overusage <span class="pull-right">$215</span></p>
 				<p>Additional <span class="pull-right">$234</span></p>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 total-cost">
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost">
 				<div>
 					$2209
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-edit-btn-col">
 			<button class="btn all-btn primary-btn pull-left" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
 			<button class="btn all-btn primary-btn pull-right">Save Invoice</button>
 		</div>
