--- a/src/app/views/seller-account/invoices/list/list.html
+++ b/src/app/views/seller-account/invoices/list/list.html
@@ -1,33 +1,28 @@
-<div>
-    <h2>Invoices</h2>
-
-    <div class="booking-history">
-        <div  ng-repeat="item in mdl.items" class="booking-info clearfix">
-            <h5 class="box-title col-md-3">
-                <i class="icon soap-icon-card yellow-color circle"></i>Invoice
-                <small>ID : {{item.id}}</small>
-            </h5>
-            <h5 class="box-title col-md-2">
-                <i class="icon yellow-color circle"></i>
-                {{
-                  item.invoice.is_paid ? 'Paid' : 'Not Paid'
-                }}
-            </h5>
-            <h5 class="box-title col-md-1">
-                <i class="icon yellow-color circle"></i>
-                {{
-                  item.is_approve ? 'Approved' : 'Not Approved'
-                }}
-            </h5>
-            <h5 class="box-title col-md-2 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>${{item.total}}
-            </h5>
-            <!-- <button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.view({id:item.id})">View Details</button> -->
-            <a class="pull-right clickable-icon" ui-sref="main.sellerAccount.invoices.view({id:item.id})">
-                <i class="fa fa-eye"></i>
-            </a>
-        </div>
-    </div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
+			<h1 class="no-margin skin-color seller-heading-font">Invoices</h1>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+		<div ng-repeat="item in mdl.items" class="booking-info clearfix no-lpadding no-rpadding">
+			<h5 class="box-title col-lg-3 col-md-3 col-sm-3 col-xs-5 no-padding">
+				<i class="icon soap-icon-card yellow-color circle"></i>Invoice
+				<small>ID : {{item.id}}</small>
+			</h5>
+			<h5 class="box-title col-lg-2 col-md-2 col-sm-2 col-xs-2 no-padding">
+				<i class="icon yellow-color circle"></i>
+				{{item.invoice.is_paid ? 'Paid' : 'Not Paid'}}
+			</h5>
+			<h5 class="box-title col-lg-1 col-md-1 col-sm-1 col-xs-4 no-padding">
+				<i class="icon yellow-color circle"></i>
+				{{item.is_approve ? 'Approved' : 'Not Approved'}}
+			</h5>
+			<h5 class="box-title col-lg-2 col-md-2 col-sm-2 col-xs-1 col-lg-offset-1  col-md-offset-1 no-padding col-sm-offset-1">
+				<i class="icon yellow-color circle"></i>${{item.total}}
+			</h5>
+			<!-- <button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.view({id:item.id})">View Details</button> -->
+			<a class="pull-right clickable-icon" ui-sref="main.sellerAccount.invoices.view({id:item.id})">
+				<i class="fa fa-eye"></i>
+			</a>
+		</div>
 </div>
 
 
