--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -1,72 +1,79 @@
-<div class="booking-information travelo-box invoice-details" style="margin-bottom: 0px; padding: 0;">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<h2>Invoice Details</h2>
-		<dl class="term-description">
-				<dt>Order number:</dt><dd>{{mdl.invoice.order.id}}</dd>
-		</dl>
+	</div>
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding term-description">
+		<p class="hotel-color no-margin">Order number:</p>
+	</div>
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+		<p class="no-margin">{{mdl.invoice.order.id}}</p>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<hr />
-		<div class="row invoice-address align-address" style="margin-bottom: 0;">
-				<div class="col-md-6">
-						<h2>Shipping Address</h2>
-						<dl class="term-description">
-								<dd>{{mdl.item.invoice.order.shipping_address.first_name}} {{mdl.item.invoice.order.shipping_address.last_name}}</dd>
-								<dd>{{mdl.item.invoice.order.shipping_address.address1+' '+mdl.item.invoice.order.shipping_address.address2}}</dd>
-								<dd>{{mdl.item.invoice.order.shipping_address.city.name}}-{{mdl.item.invoice.order.shipping_address.zip_code}}</dd>
-								<dd>{{mdl.item.invoice.order.shipping_address.country.name}}</dd>
-						</dl>
-				</div>
-				<div class="col-md-6">
-						<h2>Billing Address</h2>
-						<dl class="term-description">
-								<dd>{{mdl.item.invoice.order.billing_address.first_name}} {{mdl.item.invoice.order.billing_address.last_name}}</dd>
-								<dd>{{mdl.item.invoice.order.billing_address.address1+' '+mdl.item.invoice.order.billing_address.address2}}</dd>
-								<dd>{{mdl.item.invoice.order.billing_address.city.name}}-{{mdl.item.invoice.order.billing_address.zip_code}}</dd>
-								<dd>{{mdl.item.invoice.order.billing_address.country.name}}</dd>
-						</dl>
-				</div>
+	</div>
+	<div class="row invoice-address align-address" style="margin-bottom: 0;">
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<h2>Shipping Address</h2>
+			<dl class="term-description">
+				<dd>{{mdl.item.invoice.order.shipping_address.first_name}} {{mdl.item.invoice.order.shipping_address.last_name}}</dd>
+				<dd>{{mdl.item.invoice.order.shipping_address.address1+' '+mdl.item.invoice.order.shipping_address.address2}}</dd>
+				<dd>{{mdl.item.invoice.order.shipping_address.city.name}}-{{mdl.item.invoice.order.shipping_address.zip_code}}</dd>
+				<dd>{{mdl.item.invoice.order.shipping_address.country.name}}</dd>
+			</dl>
 		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<h2>Billing Address</h2>
+			<dl class="term-description">
+				<dd>{{mdl.item.invoice.order.billing_address.first_name}} {{mdl.item.invoice.order.billing_address.last_name}}</dd>
+				<dd>{{mdl.item.invoice.order.billing_address.address1+' '+mdl.item.invoice.order.billing_address.address2}}</dd>
+				<dd>{{mdl.item.invoice.order.billing_address.city.name}}-{{mdl.item.invoice.order.billing_address.zip_code}}</dd>
+				<dd>{{mdl.item.invoice.order.billing_address.country.name}}</dd>
+			</dl>
+		</div>
+	</div>
 </div>
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col">
-		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 pull-center">
 			<img src="http://placehold.it/80x80" alt="">
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 product-name">
 			<h4>Hiren product name</h4>
 		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 description-col">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<div class="col-lg-6 col-md-6 col-sm-5 col-xs-12 description-col description-col-xs col-padding-small">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 border-sm">
 				<p>Rented For <span class="pull-right">12 days</span></p>
 				<p>Order Type <span class="pull-right">Postpaid</span></p>
 				<p>Quantity <span class="pull-right">3</span></p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-col">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right-col">
 				<p>Shipping <span class="pull-right">$100</span></p>
 				<p>Overuse <span class="pull-right">$178</span></p>
 				<p>Additional <span class="pull-right">$230</span></p>
 			</div>
 		</div>
-		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 product-name pull-center">
+		<div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 product-name pull-center product-name-xs">
 			<h4>$1200</h4>
 		</div>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
-	 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	 	<div class="col-lg-6 col-md-6 col-sm-4 col-xs-12">
 			<div class="description">
 				<h4 style="margin-top: 28px;">Cart Total</h4>
 			</div>
 	 	</div>
-	 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 add-cost">
+	 	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 add-cost">
 	 		<p>Shipping Cost <span class="pull-right">$50</span></p>
 	 		<p>Overusage <span class="pull-right">$215</span></p>
 	 		<p>Additional <span class="pull-right">${{mdl.item.additional_charge}}</span></p>
 	 	</div>
-	 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 total-cost">
+	 	<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 total-cost">
 			<div>
 				${{mdl.item.total}}
 			</div>
 		</div>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col">
 		<button class="btn all-btn uppercase pull-left primary-btn" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
 		<button class="btn all-btn uppercase pull-right primary-btn">Download PDF</button>
 		<button style="margin-right:4px;" class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
