--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -1,5 +1,5 @@
 
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin skin-color seller-heading-font">Orders Received</h1>
 	</div>
 
